--- a/4x4_chassi/index.html
+++ b/4x4_chassi/index.html
@@ -16,8 +16,8 @@
 		<td>
 		<p align="right"><font size="2" face="Verdana">Fun 
 		Projects for 
-				your </font><font size="2"><font face="Arial Rounded MT Bold">LEGO</font><sup><font face="Arial Rounded MT Bold">®</font></sup><font face="Arial Rounded MT Bold"> 
-				MINDSTORMS</font><sup><font face="Arial Rounded MT Bold">®</font></sup></font><font size="2" face="Arial Rounded MT Bold"> 
+				your </font><font size="2"><font face="Arial Rounded MT Bold">LEGO</font><sup><font face="Arial Rounded MT Bold">Â®</font></sup><font face="Arial Rounded MT Bold"> 
+				MINDSTORMS</font><sup><font face="Arial Rounded MT Bold">Â®</font></sup></font><font size="2" face="Arial Rounded MT Bold"> 
 				NXT!</font></td>
 	</tr>
 </table>
@@ -133,7 +133,7 @@ be added to the chassis. </p>
 		<td>
 <p align="center">&nbsp;</p>
 <p align="center"><font face="Verdana" size="1">Copyright </font>
-<font size="1" face="Times New Roman">© </font><font face="Verdana" size="1">
+<font size="1" face="Times New Roman">Â© </font><font face="Verdana" size="1">
 2007-2009 by Dave Parker.&nbsp; All rights reserved.&nbsp; <br>
 All project designs, images, and programs are protected by copyright.&nbsp; Please see 
 the <a href="../copyright.html">usage policy</a>. </font></p>
