--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       { name: '4x4_chassis', preview: 'DCP_2680.jpg' },
       { name: '4x4_joystick', preview: 'DCP_2670.JPG' },
       { name: '5-button_remote', preview: 'DCP_3235.JPG' },
-      { name: 'alfa_rex', preview: '0000.JPG', pdf: true },
-      { name: 'ball_coaster', preview: 'DCP_8103.jpg' },
-      { name: 'ball_hunter', preview: 'DCP_5755.jpg' },
+      { name: 'alfa_rex', preview: '0000.jpg', pdf: true },
+      { name: 'ball_coaster', preview: 'DCP_8103.JPG' },
+      { name: 'ball_hunter', preview: 'DCP_5755.JPG' },
       { name: 'ball_shooter', preview: 'DCP_3336.JPG' },
       { name: 'ballerina', preview: 'DCP_5528.JPG' },
       { name: 'baseball_batter', preview: 'DCP_4240.jpg' },
