--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       { name: 'ball_hunter', preview: 'DCP_5755.JPG' },
       { name: 'ball_shooter', preview: 'DCP_3336.JPG' },
       { name: 'ballerina', preview: 'DCP_5528.JPG' },
-      { name: 'baseball_batter', preview: 'DCP_4240.jpg' },
+      { name: 'baseball_batter', preview: 'DCP_4240.JPG' },
       { name: 'baseball_game', preview: 'DCP_3288.JPG' },
       { name: 'belt-driven_Colour_Sorter', preview: '0000.JPG', pdf: true },
       { name: 'birthday_cake', preview: 'DCP_8831.JPG' },
