--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       { name: 'dolphin', preview: 'DCP_8920.JPG' },
       { name: 'door_alarm', preview: 'DCP_2817.JPG' },
       { name: 'dragster', preview: 'DCP_2767.JPG' },
-      { name: 'echo_telegraph', preview: 'DCP_8758.JPG' },
+      { name: 'echo_telegraph', preview: 'DCP_8758.jpg' },
       { name: 'explorer', preview: 'DCP_3136.JPG' },
       { name: 'fake_GPS', preview: 'DCP_5753-1.JPG' },
       { name: 'five_minute_bot', preview: 'DCP_8898.JPG' },
